--- a/songbird/src/styles/style.css
+++ b/songbird/src/styles/style.css
@@ -1,3 +1,16 @@
+* {
+  margin: 0;
+  padding: 0;
+}
+
+body {
+  background-color: #222;
+}
+
 .wrapper {
-  color: red;
+  width: 80%;
+  max-width: 1440px;
+  height: 100%;
+  margin: 0 auto;
+  margin-top: .5rem;
 }
