--- a/songbird/src/components/questionBox/questionBox.css
+++ b/songbird/src/components/questionBox/questionBox.css
@@ -50,7 +50,6 @@
 }
 
 .seek {
-  background: red;
   width: 100%;
   margin-right: 20px;
 }
@@ -58,20 +57,16 @@
 .seek[value] {
   -webkit-appearance: none;
   appearance: none;
-  background-color: white;
-  color: #00bc8c;
-  height: 8px;
+  background-color: rgb(185, 185, 185);
+  height: 6px;
 }
 
 .seek[value]::-webkit-progress-bar {
-  background-color: white;
   border-radius: 2px;
-  border: 1px solid lighten(#acacac, 20%);
-  color: #00bc8c;
 }
 
 .seek::-webkit-progress-value {
-  background-color: #00bc8c;
+  background: linear-gradient(to right, rgb(0, 188, 140) 0%, rgb(61, 133, 140) 100%) !important;
 }
 
 .player-time {
